fix: use absolute values divisible by 4

--- a/src/app/shared/components/template/components/text-bubble/text-bubble.component.scss
+++ b/src/app/shared/components/template/components/text-bubble/text-bubble.component.scss
@@ -137,8 +137,8 @@ $bubble-border-color-4: var(--text-bubble-border-color-4, --ion-color-secondary-
 // For the speaker name
 .speaker-name {
   position: absolute;
-  bottom: -55px;
-  left: 78px;
+  bottom: -56px;
+  left: 80px;
   color: var(--ion-color-gray-700);
 }
 .container[data-position="right"] {
